--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,7 +2,8 @@ image:
   file: .gitpod.Dockerfile
 
 tasks:
-  - init: pip install -r ./requirements.txt
+  - before: sudo apt-get install -y graphviz
+    init: pip install -r ./requirements.txt
 
 vscode:
   extensions:
